--- a/GearEditor/GearEditor.csproj
+++ b/GearEditor/GearEditor.csproj
@@ -39,6 +39,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +50,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database1DataSet1.cs">
+      <DependentUpon>Database1DataSet1.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Database1DataSet1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -123,6 +128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GearEditorForm.resx">
       <DependentUpon>GearEditorForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MaterialCreationForm.resx">
+      <DependentUpon>MaterialCreationForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MaterialEditorForm.resx">
       <DependentUpon>MaterialEditorForm.cs</DependentUpon>
@@ -230,7 +238,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Database1.accdb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
